# fact0

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  REAMDE.md
.github/workflows/: docs-validate.yml  sdk-go.yml  sdk-python.yml  sdk-typescript.yml
docs/: .gitignore  Assistant.md  EXPLAINER.md  MINTLIFY.md  README.md  changelog.mdx  custom.css  docs.json  introduction.mdx  llms.txt  quickstart.mdx  sync-openapi.sh
docs/concepts/: audit-vs-telemetry.mdx  events.mdx  executions.mdx
docs/guides/: agent-prompt.mdx  alerts.mdx  compliance.mdx  rate-limits.mdx  security.mdx
docs/integrations/: agno.mdx  autogen.mdx  camel-ai.mdx  chatdev.mdx  crewai.mdx  express.mdx  fastapi.mdx  google-adk.mdx  langchain.mdx  langgraph.mdx  llamaindex.mdx  mastra.mdx  nextjs.mdx  openai-agents-sdk.mdx  opentelemetry.mdx  overview.mdx  vercel-ai-sdk.mdx
docs/observability/: overview.mdx  prompt-registry.mdx
docs/openapi/: audit.v1.yaml  telemetry.v1.yaml
docs/platform/: overview.mdx
openapi/: telemetry.v1.yaml
scripts/: sync-openapi-from-app.sh
sdk/python/: README.md  pyproject.toml
sdk/python/auditlog/: __init__.py  client.py
sdk/python/examples/: quickstart.py
sdk/python/fact0/: __init__.py  _http.py  exceptions.py
sdk/python/fact0/audit/: async_client.py  client.py  models.py  transport.py
sdk/python/fact0/integrations/: fastapi.py  langchain.py
sdk/python/fact0/telemetry/: client.py  context.py
sdk/python/tests/: conftest.py  test_async_client.py  test_async_features.py  test_batching.py  test_client.py  test_http.py  test_models.py  test_telemetry.py
(+34 files in other folders)
