[project]
name = "fact0-sdk"
version = "1.0.0"
description = "Fact0 SDK - audit log and execution telemetry for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Fact0"}]
dependencies = [
  "pydantic>=2.6,<3",
  "requests>=2.31,<3",
  "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://fact0.io"
Documentation = "https://docs.fact0.io"
Repository = "https://github.com/fact0-ai/fact0"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
  "mypy>=1.8",
]
langchain = [
  "langchain-core>=0.2",
]
fastapi = [
  "fastapi>=0.110",
  "starlette>=0.36",
]

[project.scripts]

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
include = ["fact0*", "auditlog*"]
exclude = ["tests*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning:fact0",
  "ignore::DeprecationWarning:auditlog",
  "ignore::pytest.PytestUnraisableExceptionWarning",
  "ignore::ResourceWarning",
]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["fact0"]
